# tictactoe

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  build.gradle  configure.ac  gradle-app.setting
android/: AndroidManifest.xml  build.gradle
android/assets/: game.atlas  ui.json
android/src/com/gmail/emersonmx/tictactoe/android/: AndroidLauncher.java
core/src/: TicTacToe.gwt.xml
core/src/com/gmail/emersonmx/tictactoe/: AbstractController.java  AbstractView.java  Application.java  BaseScreen.java  BaseScreenOverlay.java  Controller.java  Drawable.java  Game.java  GameApplication.java  GameController.java  GameEvent.java  GameInput.java  GameListener.java  GameScreen.java  GameScreenOverlay.java  GameView.java  MenuScreen.java  Player.java  Point.java  ScreenAdapter.java  SpriteActor.java  SpritesActor.java  TicTacToe.java  TicTacToeGame.java  View.java  ViewManager.java
core/src/com/gmail/emersonmx/tictactoe/application/: Application.java  GameApplication.java  Resource.java  TicTacToe.java
core/src/com/gmail/emersonmx/tictactoe/controller/: AbstractController.java  Controller.java  GameController.java
core/src/com/gmail/emersonmx/tictactoe/model/: Application.java  Game.java  GameApplication.java  GameEvent.java  GameListener.java  Player.java  Resource.java
core/src/com/gmail/emersonmx/tictactoe/scene/: BackgroundActor.java  BlackboardActor.java  BoardActor.java  BottomActor.java  BottomGroupActor.java  (+3 more)
desktop/: build.gradle
images/layout/: all.xcf  background.xcf  blackboard.xcf  board_line.xcf  debug_area.xcf  divide.xcf  draw.xcf  game_drawn.xcf  hash_line.xcf  hash_line_horizontal.xcf  hash_line_vertical.xcf  line.xcf  logo.xcf  mark_o.xcf  mark_x.xcf  match_winner.xcf  menu.xcf  number_1.xcf  number_2.xcf  number_3.xcf  number_4.xcf  number_5.xcf  number_7.xcf  number_8.xcf  number_9.xcf  play.xcf  player_turn.xcf  player_wins.xcf  quit.xcf  score.xcf  score_line.xcf  score_number_0.xcf  score_number_6.xcf  score_number_8.xcf  score_separator.xcf  separator.xcf  tap_to_start.xcf  window_maker.xcf
test/: game_test.cpp
tictactoe/game/: application.cpp  application.hpp  game.cpp  game.hpp  game_event.hpp  game_listener.hpp  main.cpp  player.hpp  tictactoe.cpp  tictactoe.hpp  tictactoe_event.hpp  tictactoe_listener.hpp
tools/: create_assets.sh  texture_packer.sh
(+17 files in other folders)
